fix thumb titles not showing up

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ a {
 }
 
 a:visited {
-	color: $white;
+	color: #000;
 }
 
 // Styling for the header
@@ -80,6 +80,7 @@ a:visited {
 			margin: 0;
 			border-top: 2px solid $grey;
 			padding: 1em;
+			color: #000;
 		}
 	}
 }
